[workspace]
members = [
    "fuel-proving-games-risc0",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.7.7"
fuel-zkvm-primitives-prover = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "6a43f0f" }
fuel-zkvm-primitives-input-provider = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "6a43f0f" }
fuel-zkvm-primitives-test-fixtures = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "6a43f0f" }
risc0-zkvm = { version = "1.2.5", features = ["unstable"] }
risc0-build = { version = "1.2.5", features = ["unstable"] }
fuel-proving-games-risc0 = { path = "./fuel-proving-games-risc0" }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
