[workspace]
members = [
    "fuel-block-execution-game-sp1",
    "fuel-decompression-game-sp1",
    "fuel-proving-games-sp1",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.7.7"
fuel-zkvm-primitives-prover = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "6a43f0f" }
fuel-zkvm-primitives-input-provider = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "6a43f0f" }
fuel-zkvm-primitives-test-fixtures = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "6a43f0f" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0-rc.3" }
sp1-zkvm = { version = "4.1.3" }
sp1-helper = { version = "4.1.3" }
sp1-sdk = { version = "4.1.3" }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "sha3-v0.10.8-patch-v1" }
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "crypto_bigint-v0.5.5-patch-v1" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "tiny_keccak-v2.0.2-patch-v1" }
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0-rc.3-v2" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0-rc.3" }
