[package]
version = "0.1.0"
name = "fuel-decompression-game-risc0"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.7"
risc0-zkvm = { version = "1.2.5", default-features = false, features = ["std", "heap-embedded-alloc", "unstable"] }
fuel-zkvm-primitives-prover = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "6a43f0f" }

[workspace]

[profile.release]
codegen-units = 1
lto = "thin"
strip = "none"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
curve25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1"  }
