[package]
version = "0.1.0"
name = "fuel-proving-games-risc0"
edition = "2021"

[[bin]]
name = "fuel-block-execution-game-risc0"
path = "src/bin/block_execution_game.rs"

[[bin]]
name = "fuel-decompression-game-risc0"
path = "src/bin/decompression_game.rs"

[lib]
name = "fuel_proving_games_risc0"
path = "src/lib/lib.rs"

[dependencies]
alloy-sol-types = { workspace = true }
fuel-zkvm-primitives-prover = { workspace = true }
fuel-zkvm-primitives-test-fixtures = { workspace = true }
risc0-zkvm = { workspace = true, features = ["unstable"] }
thiserror = "2.0.12"
bincode = "1.3.3"
anyhow = "1.0.41"
clap = { version = "4.0", features = ["derive", "env"] }
fuel-zkvm-primitives-input-provider = { workspace = true }
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serde = "1.0"
csv = "1.3.1"

[package.metadata.risc0]
methods = ["../fuel-block-execution-game-risc0", "../fuel-decompression-game-risc0"]

[build-dependencies]
risc0-build = { workspace = true }

[features]
cuda = ["risc0-zkvm/cuda"]
