[package]
name = "fuel-risc0-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuel-risc0-host"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
fuel-risc0-methods = { path = "../fuel-risc0-methods" }
risc0-zkvm =  { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
fuel-zkvm-primitives-input-provider = {workspace = true}
fuel-zkvm-primitives-prover = {workspace = true}
fuel-zkvm-primitives-test-fixtures = { git = "https://github.com/FuelLabs/zkvm-primitives", rev = "1d79e2e", features = ["enhanced_enums", "serde"] }
tokio = { version = "1.41.0", features = ["full"] }
alloy-sol-types = { workspace = true }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"

[dev-dependencies]
csv = "1.3.1"