[package]
name = "fuel-risc0-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuel-risc0-host"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
alloy-sol-types = { workspace = true }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"] }
fuel-risc0-methods = { workspace = true }
fuel-zkvm-primitives-input-provider = { workspace = true }
fuel-zkvm-primitives-prover = { workspace = true }
fuel-zkvm-primitives-test-fixtures = { workspace = true }
risc0-zkvm =  { workspace = true, features = ["unstable"] }
serde = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
cuda = ["risc0-zkvm/cuda", "fuel-risc0-methods/cuda"]

[dev-dependencies]
csv = "1.3.1"
