[package]
version = "0.1.0"
name = "fuel-risc0-methods"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
risc0-zkvm = { version = "1.2.1-rc.0", features = ["unstable"] }
fuel-zkvm-primitives-prover = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = { version = "1.2.1-rc.0", features = ["unstable"] }

[features]
cuda = ["risc0-zkvm/cuda"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
