[package]
version = "0.1.0"
name = "fuel-risc0-methods"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
fuel-zkvm-primitives-prover = { workspace = true }
fuel-zkvm-primitives-test-fixtures = { workspace = true }
risc0-zkvm = { workspace = true, features = ["unstable"] }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = { workspace = true }

[features]
cuda = ["risc0-zkvm/cuda"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
