[package]
version = "0.1.0"
name = "fuel-proving-games-sp1"
edition = "2021"
default-run = "block-execution-game-sp1-core"

[[bin]]
name = "block-execution-game-sp1-core"
path = "src/bin/block_execution_game/core.rs"

[[bin]]
name = "block-execution-game-sp1-evm"
path = "src/bin/block_execution_game/evm.rs"

[lib]
name = "fuel_proving_games_sp1"
path = "src/lib/lib.rs"

[dependencies]
alloy-sol-types = { workspace = true }
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"] }
fuel-zkvm-primitives-input-provider = { workspace = true }
fuel-zkvm-primitives-prover = { workspace = true }
fuel-zkvm-primitives-test-fixtures = { workspace = true, features = ["enhanced_enums", "serde"] }
hex = "0.4.3"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-sdk = { workspace = true }
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"

[features]
cuda = ["sp1-sdk/cuda"]

[dev-dependencies]
csv = "1.3.1"

[build-dependencies]
sp1-helper = { workspace = true }
