[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
prover = { path = "../prover" }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"