[package]
version = "0.1.0"
name = "fuel-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
fuel-zkvm-primitives-prover = { workspace = true }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"