[package]
version = "0.1.0"
name = "fuel-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { version = "4.0.0-rc.8" }
fuel-zkvm-primitives-prover = { workspace = true }
# force the use of the patched version of curve25519-dalek, otherwise 4.1.2 is used
curve25519-dalek = { workspace = true }

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"