[package]
version = "0.1.0"
name = "fuel-script"
edition = "2021"
default-run = "fuel"

[[bin]]
name = "fuel"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "3.3.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fuel-zkvm-primitives-input-provider = { workspace = true }
fuel-zkvm-primitives-prover = { workspace = true }
fuel-zkvm-primitives-test-fixtures = { path = "../../../../zkvm-primitives/fuel-zkvm-primitives-test-fixtures", features = ["enhanced_enums"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bincode = "1.3.3"

[build-dependencies]
sp1-helper = "3.3.0"
